@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix bug ♯1573296: arena : spells with "target" doesn't works
+server/spell_util.c: spell_find_dir should consider players when on battleground.
+----
 Fix bug #1594696: Altar created with creator - consecration
 server/time.c: copy creator's level, as per behaviour before function rewrite.
 Ryo 2006-11-13
